--- a/home_task_Maket_5/index.html
+++ b/home_task_Maket_5/index.html
@@ -2,9 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!--   ?????????????   -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--   ?????????????   -->
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
       href="https://fonts.googleapis.com/css?family=Lato&display=swap"
@@ -16,10 +14,10 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/media.css" />
-    <title>Document</title>
+    <title>MAKET</title>
   </head>
   <body>
-    <div class="header">
+    <div class="header clearfix">
       <div class="container">
         <p>Nipro Agency</p>
         <ul>
@@ -30,11 +28,9 @@
           <li><a href="#">Contact</a></li>
           <li><img src="img/search_icon.png" alt="search_icon" /></li>
         </ul>
-        <div style="clear: both;"></div>
       </div>
     </div>
-
-    <div class="slider">
+    <div class="slider clearfix">
       <div class="container">
         <h1>We Have Talented Team</h1>
         <p>
@@ -45,7 +41,6 @@
         </p>
         <button>
           <p>Learn More<span>&rarr;</span></p>
-          <!-- <img src="" alt="" /> -->
         </button>
         <ul>
           <li>Prev</li>
@@ -54,10 +49,8 @@
           <li style="color: #8e8e8e;">&#124;</li>
           <li>Next</li>
         </ul>
-        <div style="clear: both;"></div>
       </div>
     </div>
-
     <div class="servise">
       <div class="container">
         <div class="vertical_line"></div>
@@ -71,7 +64,7 @@
           essentially unchanged. It was popularised in the er including versions
           of Lorem Ipsum.
         </p>
-        <div class="wrapper_box">
+        <div class="wrapper_box clearfix">
           <div class="wrapper">
             <div class="icon">
               <img src="img/branding_icon.png" alt="branding_icon" />
@@ -120,12 +113,10 @@
             </p>
             <a href="#">More<span>&rarr;</span></a>
           </div>
-          <div style="clear: both;"></div>
         </div>
       </div>
     </div>
-
-    <div class="portfolio">
+    <div class="portfolio clearfix">
       <div class="container">
         <div class="vertical_line"></div>
         <h2>Recent Work</h2>
@@ -136,8 +127,7 @@
           <li>UI Design</li>
           <li>Photoshop</li>
         </ul>
-        <div style="clear: both;"></div>
-        <div class="portfolio_wrapper">
+        <div class="portfolio_wrapper clearfix">
           <div class="portfolio_wrapper_item">
             <img src="img/portfolio/Protfolio_1.png" alt="" />
             <div class="portfolio_wrapper_item_hover">
@@ -210,17 +200,14 @@
               </div>
             </div>
           </div>
-          <div style="clear: both;"></div>
         </div>
-        <div style="clear: both;"></div>
       </div>
     </div>
-
     <div class="why_nipro">
       <div class="container">
         <div class="vertical_line"></div>
         <h2>Why Choose Nipro</h2>
-        <div class="why_nipro_wrapper">
+        <div class="why_nipro_wrapper clearfix">
           <div class="why_nipro_wrapper_item">
             <img src="img/why_nipro/1.png" alt="" />
             <h3>Creative Design</h3>
@@ -269,16 +256,14 @@
               industry. Lorem some
             </p>
           </div>
-          <div style="clear: both;"></div>
         </div>
       </div>
     </div>
-
-    <div class="who_work">
+    <div class="who_work clearfix">
       <div class="container">
         <div class="vertical_line"></div>
         <h2>Who Work With US</h2>
-        <div class="who_work_box">
+        <div class="who_work_box clearfix">
           <div class="who_work_box_item">
             <div class="foto">
               <img src="img/who_work/employee_1.png" alt="empoyee1" />
@@ -315,18 +300,14 @@
               <p>Web Designer</p>
             </div>
           </div>
-          <div style="clear: both;"></div>
         </div>
-        <div style="clear: both;"></div>
       </div>
     </div>
-
-    <div class="best_price">
+    <div class="best_price clearfix">
       <div class="container">
         <div class="vertical_line"></div>
         <h2>Best Pricing</h2>
-
-        <div class="best_price_wrapper">
+        <div class="best_price_wrapper clearfix">
           <div class="best_price_box">
             <div class="best_price_box_name">
               <h3>Basic</h3>
@@ -391,30 +372,24 @@
               <a href="#">Sign Up<span>&rarr;</span></a>
             </div>
           </div>
-          <div style="clear: both;"></div>
         </div>
-        <div style="clear: both;"></div>
       </div>
     </div>
-
-    <div class="responsive">
+    <div class="responsive clearfix">
       <div class="container">
         <p>Nipro | Responsive HTML Template</p>
         <button>Buy Now <span>&rarr;</span></button>
       </div>
-      <div style="clear: both;"></div>
     </div>
-
     <div class="footer_box">
       <div class="container">
         <div class="vertical_line"></div>
-        <div class="footer_top">
+        <div class="footer_top clearfix">
           <h2>Nipro Agency</h2>
           <p>
             Lorem Ipsum is simply dummy text of lol he the printing and
             typesetting industry. Lorem Ipsum Has been the koi jabi mama
           </p>
-          <div style="clear: both;"></div>
           <ul>
             <li><img src="img/footer/1.png" alt="" /></li>
             <li><img src="img/footer/2-1.png" alt="" /></li>
@@ -423,12 +398,11 @@
             <li><img src="img/footer/5.png" alt="" /></li>
             <li><img src="img/footer/6.png" alt="" /></li>
           </ul>
-          <div style="clear: both;"></div>
         </div>
       </div>
       <div class="footer_line"></div>
       <div class="container">
-        <div class="footer_bottom">
+        <div class="footer_bottom clearfix">
           <p>All rights reserved NIPRO AGENCY | By : Dzmitry Dauhaliavets</p>
           <ul>
             <li><a href="">Support</a></li>
@@ -436,7 +410,6 @@
             <li><a href="">Contact US</a></li>
             <li><a href="">Terms of Use</a></li>
           </ul>
-          <div style="clear: both;"></div>
         </div>
       </div>
     </div>
