--- a/home_task_8_45/index.html
+++ b/home_task_8_45/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="checkbox1">
-        <input type="checkbox" name="checkbox">
-        <span class="checkspan">Хочешь замахнуться мечом? Наведи курсор на воина</span>
+        <input id="warrior" type="checkbox" name="checkbox">
+        <input id="killer" type="checkbox" name="checkbox">
+        <span class="checkspan">На тебя напали. Наведи на воина, чтобы защищаться</span>
     </div>
     <div class="checkbox2">
         <p>Бла-бла-бла-бла-бла</p>
