--- a/Maket_3/index.html
+++ b/Maket_3/index.html
@@ -8,10 +8,7 @@
       href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800&display=swap" rel="stylesheet">
     <title>Maket 3</title>
   </head>
   <body>
@@ -41,8 +38,175 @@
           <div class="header__slider__line"></div>
           <p>We are a team of professionals</p>
           <div class="header__slider__line"></div>
+          <div class="header__slider__dots">
+            <div class="dot selected">
+              <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+                <defs>
+                  <clipPath id="fwkwa">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                  </clipPath>
+                </defs>
+                  <g>
+                    <g opacity=".2">
+                      <path fill="#000" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                      <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url('#fwkwa')"/>
+                    </g>
+                  </g>
+              </svg>
+            </div>
+            <div class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+                <defs>
+                  <clipPath id="fwkwa">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                  </clipPath>
+                </defs>
+                  <g>
+                    <g opacity=".2">
+                      <path fill="#000" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                      <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url(&quot;#fwkwa&quot;)"/>
+                    </g>
+                  </g>
+              </svg>
+            </div>
+            <div class="dot">
+              <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+                <defs>
+                  <clipPath id="fwkwa">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                  </clipPath>
+                </defs>
+                  <g>
+                    <g opacity=".2">
+                      <path fill="#000" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                      <path fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url(&quot;#fwkwa&quot;)"/>
+                    </g>
+                  </g>
+              </svg>
+            </div>
+          </div>
+          <div class="social">
+          </div>
         </div>
       </div>
     </header>
+
+    <section class="features">
+      <div class="container">
+        <h2>Features</h2>
+        <div class="line_heart_line">
+
+        </div>
+        <div class="features_box">
+          <div class="features_box_item clearfix">
+            <img src="img/features/icon1.png" alt="icon1">
+            <h3>Branding</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+          </div>
+          <div class="features_box_item clearfix">
+            <img src="img/features/icon2.png" alt="icon2">
+            <h3>Development</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+          </div>
+          <div class="features_box_item clearfix">
+            <img src="img/features/icon3.png" alt="icon3">
+            <h3>Consulting</h3>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+          </div>
+        </div>
+        <div class="features__slider__dots">
+          <div class="dot selected">
+            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                </clipPath>
+              </defs>
+                <g>
+                  <g opacity=".2">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                    <path fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url('#fwkwa')"/>
+                  </g>
+                </g>
+            </svg>
+          </div>
+          <div class="dot">
+            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                </clipPath>
+              </defs>
+                <g>
+                  <g opacity=".2">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                    <path fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url(&quot;#fwkwa&quot;)"/>
+                  </g>
+                </g>
+            </svg>
+          </div>
+          <div class="dot">
+            <svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 8 8">
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                </clipPath>
+              </defs>
+                <g>
+                  <g opacity=".2">
+                    <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"/>
+                    <path fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="20" stroke-width="2" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" clip-path="url(&quot;#fwkwa&quot;)"/>
+                  </g>
+                </g>
+            </svg>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="works">
+      <div class="container">
+        <h2>Works</h2>
+        <div class="line_heart_line"></div>
+        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+        <div class="works__filter">
+          <ul>
+            <li>All</li>
+            <li>Branding</li>
+            <li>Web</li>
+            <li>Logo Design</li>
+            <li>Photography</li>
+          </ul>
+        </div>
+      </div>
+      
+
+      <div class="works_box">
+        <div class="works_item">
+          <img src="img/works/Layer_13.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_15.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_17.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_18.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_19.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_20.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_21.png" alt="layer">
+        </div>
+        <div class="works_item">
+          <img src="img/works/Layer_22.png" alt="layer">
+        </div>
+      </div>
+    </section>
   </body>
 </html>
