add section meet our team

--- a/Maket_3/index.html
+++ b/Maket_3/index.html
@@ -313,6 +313,202 @@
           accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
           ab illo inventore
         </p>
+        <div class="meet_our_team_box">
+          <!-- Team item 1 -->
+          <div class="team__item">
+            <div class="foto">
+              <img src="img/meet-our-team/Layer_24.png" alt="foto">
+            </div>
+            <div class="foto__hover">
+              <p>
+                <span>Nemo enim ipsam voluptatem quia voluptas</span><br> sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+              </p>
+              <div class="foto__hover__social">
+                <div class="social_item">
+                  <img src="img/meet-our-team/Twitter.png" alt="twitter">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/FB.png" alt="facebook">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/G+.png" alt="google">
+                </div>
+              </div>
+            </div>
+            <div class="foto__about">
+              <h4>John Filmr Doe</h4>
+              <p>Managing Director</p>
+            </div>
+          </div>
+          <!-- Team item 2 -->
+          <div class="team__item">
+            <div class="foto">
+              <img src="img/meet-our-team/Layer_25.png" alt="foto">
+            </div>
+            <div class="foto__hover">
+              <p>
+                <span>Nemo enim ipsam voluptatem quia voluptas</span> sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+              </p>
+              <div class="foto__hover__social">
+                <div class="social_item">
+                  <img src="img/meet-our-team/Twitter.png" alt="twitter">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/FB.png" alt="facebook">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/G+.png" alt="google">
+                </div>
+              </div>
+            </div>
+            <div class="foto__about">
+              <h4>Chystine Hineu</h4>
+              <p>Lead Designer</p>
+            </div>
+          </div>
+          <!-- Team item 3 -->
+          <div class="team__item">
+            <div class="foto">
+              <img src="img/meet-our-team/Layer_26.png" alt="foto">
+            </div>
+            <div class="foto__hover">
+              <p>
+                <span>Nemo enim ipsam voluptatem quia voluptas</span> sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+              </p>
+              <div class="foto__hover__social">
+                <div class="social_item">
+                  <img src="img/meet-our-team/Twitter.png" alt="twitter">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/FB.png" alt="facebook">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/G+.png" alt="google">
+                </div>
+              </div>
+            </div>
+            <div class="foto__about">
+              <h4>Martin Matrone</h4>
+              <p>Lead Developer</p>
+            </div>
+          </div>
+          <!-- Team item 4 -->
+          <div class="team__item">
+            <div class="foto">
+              <img src="img/meet-our-team/Layer_27.png" alt="foto">
+            </div>
+            <div class="foto__hover">
+              <p>
+                <span>Nemo enim ipsam voluptatem quia voluptas</span> sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+              </p>
+              <div class="foto__hover__social">
+                <div class="social_item">
+                  <img src="img/meet-our-team/Twitter.png" alt="twitter">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/FB.png" alt="facebook">
+                </div>
+                <div class="social_item">
+                  <img src="img/meet-our-team/G+.png" alt="google">
+                </div>
+              </div>
+            </div>
+            <div class="foto__about">
+              <h4>Steve Flaulkin</h4>
+              <p>Sr. UI Designer</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="features__slider__dots">
+          <div class="dot selected">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+            >
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                </clipPath>
+              </defs>
+              <g>
+                <g opacity=".2">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                  <path
+                    fill="none"
+                    stroke="#000"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-miterlimit="20"
+                    stroke-width="2"
+                    d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
+                    clip-path="url('#fwkwa')"
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="dot">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+            >
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                </clipPath>
+              </defs>
+              <g>
+                <g opacity=".2">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                  <path
+                    fill="none"
+                    stroke="#000"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-miterlimit="20"
+                    stroke-width="2"
+                    d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
+                    clip-path='url("#fwkwa")'
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
+          <div class="dot">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="8"
+              height="8"
+              viewBox="0 0 8 8"
+            >
+              <defs>
+                <clipPath id="fwkwa">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                </clipPath>
+              </defs>
+              <g>
+                <g opacity=".2">
+                  <path fill="#fff" d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z" />
+                  <path
+                    fill="none"
+                    stroke="#000"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-miterlimit="20"
+                    stroke-width="2"
+                    d="M4 0a4 4 0 1 1 0 8 4 4 0 0 1 0-8z"
+                    clip-path='url("#fwkwa")'
+                  />
+                </g>
+              </g>
+            </svg>
+          </div>
+        </div>
       </div>
     </section>
   </body>
