add section Some fun facts

--- a/Maket_3/index.html
+++ b/Maket_3/index.html
@@ -511,5 +511,59 @@
         </div>
       </div>
     </section>
+
+    <section class="some_fun_facts">
+      <div class="container">
+        <h2>Some Fun Facts</h2>
+        <div class="line_heart_line">
+          <div class="line white"></div>
+          <img src="img/line-heart/heart-empty_copy.png" alt="heart" />
+          <div class="line white"></div>
+        </div>
+        <div class="some_fun_facts_box">
+
+          <div class="facts_item">
+            <div class="circle">
+              <div class="in_a_circle">
+                <img src="img/some-fun-facts/Clock.png" alt="Clock">
+              </div>
+            </div>
+            <p>3200</p>
+            <p>Hours of Work</p>
+          </div>
+
+          <div class="facts_item">
+            <div class="circle">
+              <div class="in_a_circle">
+                <img src="img/some-fun-facts/Friends.png" alt="Friends">
+              </div>  
+            </div>
+            <p>120</p>
+            <p>Satisfied Clinets</p>
+          </div>
+
+          <div class="facts_item">
+            <div class="circle">
+              <div class="in_a_circle">
+                <img src="img/some-fun-facts/Rocket.png" alt="Rocket">
+              </div>
+            </div>
+            <p>360</p>
+            <p>Projects delivered</p>
+          </div>
+
+          <div class="facts_item">
+            <div class="circle">
+              <div class="in_a_circle">
+                <img src="img/some-fun-facts/Cup.png" alt="Cup">
+              </div>
+            </div>
+            <p>42</p>
+            <p>Awards Won</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
   </body>
 </html>
