--- a/home_task_9b_TEST_SVG/index.html
+++ b/home_task_9b_TEST_SVG/index.html
@@ -15,6 +15,11 @@
                 <stop offset='50%' stop-color="#FFD500" />
                 <stop offset='100%' stop-color="#FF9A00"/>
             </radialGradient>
+            <linearGradient id="LG1" x1="0%" y1="0%" x2="0%" y2="100%">
+                <stop offset="0%"  stop-color="#0004C1"/>
+                <stop offset="50%" stop-color="#326EEB"/>
+                <stop offset="100%" stop-color="#32A6EB"/>
+            </linearGradient>
         </defs>
         <g stroke="null">
          <title stroke="null">background</title>
