add Lets discuss and footer

--- a/Maket_3/index.html
+++ b/Maket_3/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/style_sass.css" />
+    <link rel="stylesheet" href="fonts/fontello/css/fontello.css">
     <link
       href="https://fonts.googleapis.com/css?family=Pacifico&display=swap"
       rel="stylesheet"
@@ -565,5 +566,106 @@
         </div>
       </div>
     </section>
+
+    <section class="lets_discuss">
+      <div class="container">
+        <h2>Let’s Discuss</h2>
+        <div class="line_heart_line">
+          <div class="line"></div>
+          <img src="img/line-heart/heart-empty.png" alt="heart" />
+          <div class="line"></div>
+        </div>
+        <p>Voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+        <div class="lets_discuss_box">
+          <div class="lets_discuss_about">
+            <h6>Cras at ultrices erat, sed vulputate!</h6>
+            <p>2345 Setwant natrer, 1234, 
+              Washington. United States.
+              (401) 1234 567
+              hello@brandi.com
+              ww.brandi.com</p>
+          </div>
+          <div class="lets_discuss_form">
+            <h5>Say hello!</h5>
+            <form action="http://fe.it-academy.by/TestForm.php?" method="get" target="_blank">
+              <div class="form_group">
+                <div class="form_input">
+                  <input type="text" name="" id="Name">
+                  <label for="Name">Name</label>
+                </div>
+                <div class="form_input">
+                  <input type="email" name="" id="Email">
+                  <label for="Email">Email</label>
+                </div>
+              </div>
+              <div class="form_textarea">
+                <label for="Mes">Message</label>
+                <textarea id="Mes" name="message" cols="30" rows="1"></textarea>
+              </div>
+              <button type="submit">
+                <img src="img/lets-discuss/Envelope.png" alt="Envelope">
+                <p>Send message</p>
+              </button>
+            </form>
+          </div>
+          <div class="lets_discuss_social">
+            <a href="#"><img src="img/lets-discuss/social/behance.png" alt="behance"></a>
+            <a href="#"><img src="img/lets-discuss/social/twitter.png" alt="twitter"></a>
+            <a href="#"><img src="img/lets-discuss/social/dribbble.png" alt="dribbble"></a>
+            <a href="#"><img src="img/lets-discuss/social/forrst.png" alt="forrst"></a>
+            <a href="#"><img src="img/lets-discuss/social/google_plus.png" alt="google_plus"></a>
+            <a href="#"><img src="img/lets-discuss/social/facebook.png" alt="facebook"></a>
+          </div>
+        </div>
+      </div>
+      <div class="lets_discuss_map">
+        <div class="pointer">
+          <img src="img/lets-discuss/PIN_1.png" alt="pointer">
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="footer_box">
+          <div class="footer_logo">
+            <div class="logo">
+              <h3>Brandi</h3>
+            </div>
+            <p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
+              consequat.</p>
+          </div>
+          <div class="footer_subscribe">
+            <p>Subscribe </p>
+            <div class="footer_subscribe_input">
+              <input type="text" name="subscribe">
+              <button type="submit"></button>
+            </div>
+            <p>eusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+          </div>
+          <div class="footer_explore">
+            <p>Explore</p>
+            <ul class="footer_explore_list_1">
+              <li><a href="#">Envato</a></li>
+              <li><a href="#">Themecurve</a></li>
+              <li><a href="#">Kreativeshowcase</a></li>
+              <li><a href="#">Freebiescurve</a></li>
+            </ul>
+            <ul class="footer_explore_list_2">
+              <li><a href="#">Themeforest</a></li>
+              <li><a href="#">Microsoft</a></li>
+              <li><a href="#">Google</a></li>
+              <li><a href="#">Yahoo</a></li>
+            </ul>
+          </div>
+          <div class="footer_created">
+            <p>Created with <img src="img/line-heart/heart-empty.png" alt="heart" /> by <span>themecurve</span>, 
+              exclusive for kreativeshowcase</p>
+            <p>&copy; 2014 Brandi. All Rights Reserved.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
