--- a/Maket_3/index.html
+++ b/Maket_3/index.html
@@ -132,7 +132,12 @@
               </svg>
             </div>
           </div>
-          <div class="social"></div>
+          <div class="social">
+            <img src="img/header/social/twitter.png" alt="twitter">
+            <img src="img/header/social/facebook.png" alt="facebook">
+            <img src="img/header/social/google+.png" alt="google">
+            <img src="img/header/social/dribbble.png" alt="dribbble">
+          </div>
         </div>
       </div>
     </header>
