--- a/home_task_9e_MAKET_FLEX/index.html
+++ b/home_task_9e_MAKET_FLEX/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="sass/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <title>MAKET FLEX</title>
@@ -13,6 +14,7 @@
     </header>
     <main>
         <nav>
+            <h4>Виды спорта:</h4>
             <ul>
                 <li><a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%8C%D0%BA%D0%BE%D0%B1%D0%B5%D0%B6%D0%BD%D1%8B%D0%B9_%D1%81%D0%BF%D0%BE%D1%80%D1%82" target="_blank" title="Переход на страницу Википедии">Конькобежный спорт</a></li>
                 <li><a href="https://ru.wikipedia.org/wiki/%D0%91%D0%B8%D0%B0%D1%82%D0%BB%D0%BE%D0%BD" target="_blank" title="Переход на страницу Википедии">Биатлон</a></li>
